create level prograssion
