# src/modules/levels/models/level-complete.model.ts
@@ -1,0 +1,14 @@
+export class LevelComplete {
+  playerId: number;
+  levelOwnerProgression: LevelOwnerProgression;
+  resourcesCollected: any;
+
+  constructor(partial: Partial<LevelComplete>) {
+    Object.assign(this, partial);
+  }
+}
+
+export interface LevelOwnerProgression {
+  levelOrder: number;
+  score: number;
+}
