# src/modules/levels/services/levels-dto.converter.ts
@@ -1,0 +1,26 @@
+import { Injectable } from '@nestjs/common';
+import { LevelCompleteRequestDto, LevelCompleteResponseDto, ResourceResponseDto } from '../../../api/build';
+import { LevelComplete } from '../models/level-complete.model';
+
+@Injectable()
+export class LevelsDtoConverter {
+  public toModel(playerId: number, levelOrder: number, dto: LevelCompleteRequestDto): LevelComplete {
+    return {
+      playerId,
+      levelOwnerProgression: {
+        levelOrder,
+        score: dto.score,
+      },
+      resourcesCollected: {
+        resources: dto.resourcesCollected,
+      },
+    };
+  }
+
+  public toDto(model: LevelComplete): LevelCompleteResponseDto {
+    return {
+      score: model.levelOwnerProgression.score,
+      resourcesCollected: model.resourcesCollected as ResourceResponseDto[],
+    };
+  }
+}
